--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.3",
     "react-router-dom": "^6.22.1"
   }
 }
