--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^16.4.4",
     "env": "^0.0.2",
     "express": "^4.18.2",
-    "express-async-handler": "^1.2.0"
+    "express-async-handler": "^1.2.0",
+    "mongoose": "^8.2.1"
   },
   "devDependencies": {
     "jest": "^29.7.0"
