successfully connected db

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 PORT=8080
-MONGO_URI=mongodb+srv://naruto:sasuke@fuelquote.zj5yo7m.mongodb.net/?retryWrites=true&w=majority&appName=FuelQuote
+#MONGO_URI=mongodb+srv://naruto:sasuke@fuelquote.zj5yo7m.mongodb.net/?retryWrites=true&w=majority&appName=FuelQuote
+MONGO_URI=mongodb+srv://test1234:test1234@mern4353cluster.v0haveh.mongodb.net/?retryWrites=true&w=majority&appName=mern4353
