--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,8 @@
     "env": "^0.0.2",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
-    "mongoose": "^8.2.1"
+    "mongoose": "^8.2.1",
+    "supertest": "^6.3.4"
   },
   "devDependencies": {
     "jest": "^29.7.0"
