--- a/package.json
+++ b/package.json
@@ -2,8 +2,13 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "axios": "^1.6.8",
+    "colors": "^1.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "express-async-handler": "^1.2.0",
+    "mongoose": "^8.2.2",
     "react-router-dom": "^6.22.1"
   }
 }
