--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,10 @@
     "env": "^0.0.2",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "fs": "^0.0.1-security",
     "mongoose": "^8.2.1",
+    "nodemon": "^3.1.0",
+    "path": "^0.12.7",
     "supertest": "^6.3.4"
   },
   "devDependencies": {
