--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
@@ -22,7 +23,8 @@
     "mongoose": "^8.2.1",
     "nodemon": "^3.1.0",
     "path": "^0.12.7",
-    "supertest": "^6.3.4"
+    "supertest": "^6.3.4",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "jest": "^29.7.0"
